--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -42,5 +42,6 @@ jobs:
       - name: install all dependencies
         run: pip install -r requirements.txt
       - name: test with pytest
-        run: pip install pytest
+        run: |
+          pip install pytest
           pytest
