--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,44 @@
 alembic==1.8.1
 anyio==3.6.1
+attrs==22.1.0
 bcrypt==4.0.1
+certifi==2022.9.24
 cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
 cryptography==38.0.1
 dnspython==2.2.1
 ecdsa==0.18.0
 email-validator==1.3.0
+exceptiongroup==1.0.0
 fastapi==0.85.1
 greenlet==1.1.3.post0
 gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
+iniconfig==1.1.1
 Mako==1.2.3
 MarkupSafe==2.1.1
+packaging==21.3
 passlib==1.7.4
+pluggy==1.0.0
 psycopg2==2.9.4
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.2
+pyparsing==3.0.9
+pytest==7.2.0
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
+requests==2.28.1
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.0
 starlette==0.20.4
+tk==0.1.0
+tomli==2.0.1
 typing_extensions==4.4.0
+urllib3==1.26.12
 uvicorn==0.18.3
