--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -64,7 +64,7 @@ jobs:
       #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:latest
 
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [build]
 
     steps:
